# gbaEmulator

gbaDev/: gbaDev.elf  gbaDev.gba
gbaDev/source/: template.c
src/: ARM7TDMI.cpp  ARM7TDMI.h  ARMOps.cpp  ARMOps.h  CMakeLists.txt  THUMBOps.h  gbaProcessor.cpp  gbaProcessor.h  memoryBus.cpp  memoryBus.h
